Remove '（支持假分数）' from heading

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="box">
-        <h2>埃及分数转换（支持假分数）</h2>
+        <h2>埃及分数转换</h2>
         <p>输入分数（如 7/3、4/13）：</p>
         <input type="text" id="fraction" placeholder="a/b">
         <button onclick="convert()">转换</button>
