--- a/index.html
+++ b/index.html
@@ -3,38 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>数学工具集合</title>
+    <title>游戏或小工具</title>
     <style>
         body {
             font-family: "Microsoft YaHei", serif;
-            background: #eef2f5;
+            background: #1e3c72;
             padding: 30px;
         }
-        .box {
-            max-width: 600px;
-            margin: auto;
-            background: #ffffff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 12px rgba(0,0,0,0.15);
+
+        h2 {
+            color: #FFF
         }
+
+        .box {
+            padding: 10PX;
+            max-width: 400px;
+            margin: auto;
+            background: #000;
+            border-radius: 8px;
+            box-shadow: 14px 14px 20px 0px rgba(0,0,0,0.4);
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            gap: 10px;
+        }
+
+            .box a {
+                flex-grow: 1;
+                flex-shrink: 1;
+                width: 100px;
+            }
+
         a {
             display: block;
             margin: 10px 0;
             padding: 12px;
-            background: #4a90e2;
+            background: #4998f5;
             color: #ffffff;
             text-decoration: none;
             border-radius: 6px;
             text-align: center;
         }
-        a:hover { opacity: 0.9; }
+
+            a:hover {
+                opacity: 0.9;
+            }
     </style>
 </head>
 <body>
+
+    <h2 style="text-align: center;">游戏或小工具（WGD）</h2>
     <div class="box">
-        <h2>游戏或小工具（Wooo）</h2>
+        <a href="eng_calc.html">工程级计算器</a>
         <a href="egy_fraction.html">埃及分数计算</a>
+       
     </div>
 </body>
 </html>
